feat: new utils class to help a bit
fix(shared): fix some issues with the shared module